<resources>
    <string name="app_name">PlayStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_installed_apps">InstalledApps</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="editors_choice">Editor\'s Choice</string>
    <string name="reviews">Reviews</string>
    <string name="about_this_app">About this app</string>
    <string name="app_icon">app icon</string>
    <string name="contains_ads">Contains ads</string>
    <string name="in_app_purchases">In-app purchases</string>
    <string name="_100m">100M+</string>
    <string name="_17_mb">17 MB</string>
    <string name="downloads">Downloads</string>
    <string name="install">Install</string>
    <string name="uninstall">UnInstall</string>
    <string name="open">Open</string>
    <string name="ratings_and_reviews">Ratings and reviews</string>
    <string name="developer_contact">Developer contact</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="similar_apps">Similar apps</string>
    <string name="app_permissions">App Permissions</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="profile">Profile</string>
    <string name="screenshot">Screenshot</string>
    <string name="apps">Apps</string>
    <string name="category">Category</string>
    <string name="art_and_design">Art and Design</string>
    <string name="auto_and_vehicles">Auto and Vehicles</string>
    <string name="beauty">Beauty</string>
    <string name="books_and_reference">Books and Reference</string>
    <string name="business">Business</string>
    <string name="comics">Comics</string>
    <string name="communication">Communication</string>
    <string name="dating">Dating</string>
    <string name="education">Education</string>
    <string name="events">Events</string>
    <string name="finance">Finance</string>
    <string name="games">Games</string>
    <string name="health_and_fitness">Health and Fitness</string>
    <string name="maps_amp_navigation"><![CDATA[Maps & Navigation]]></string>
    <string name="music_amp_audio"><![CDATA[Music & Audio]]></string>
    <string name="photography">Photography</string>
    <string name="shopping">Shopping</string>
    <string name="social">Social</string>
    <string name="sports">Sports</string>
    <string name="share">Share</string>
    <string name="flag_as_inappropriate">Flag as Inappropriate</string>
    <string name="todo">TODO</string>
    <string name="more_info">More Info</string>
    <string name="editors_choice_apps">Editors\' Choice Apps</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="games_we_are_playing">Games we are Playing</string>
    <string name="entertainment">Entertainment</string>
    <string name="food_and_drink">Food and Drink</string>
    <string name="no_items">No Items</string>
    <string name="my_apps_amp_games"><![CDATA[My apps & Games]]></string>
    <string name="notifications">Notifications</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="wishList">Wishlist</string>
    <string name="account">Account</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="play_protect">Play Protect</string>
    <string name="settings">Settings</string>
    <string name="movies">Movies</string>
    <string name="books">Books</string>
    <string name="redeem">Redeem</string>
    <string name="help_amp_feedback"><![CDATA[Help & feedback]]></string>
    <string name="parent_guide">Parent guide</string>
    <string name="about_google_play">About Google Play</string>
    <string name="google_play">Google Play</string>
    <string name="top_selling_comics">Top Selling Comics</string>
    <string name="top_selling_business">Top Selling Business</string>
    <string name="top_selling_dating">Top Selling Dating</string>
    <string name="top_selling_sports">Top Selling Sports</string>
</resources>