<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/art_design"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/art_design"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/art_and_design"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/auto_vehicles"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/auto_vehicles"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/auto_and_vehicles"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/beauty"
            android:scaleType="fitXY"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/beauty"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/beauty"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/books"
            android:scaleType="fitXY"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/books_reference"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/books_and_reference"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/business"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/business"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/business"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/comics"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/comics"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/comics"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/communication"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/communication"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/communication"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/dating"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/dating"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/dating"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/education"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/education"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/entertainment"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/entertainment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/entertainment"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/events"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/events"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/events"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/finance"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/finance"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/finance"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/food"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/food_drink"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/food_and_drink"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/games"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/games"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/games"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/health"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/health_fitness"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/health_and_fitness"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/maps"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/maps"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/maps_amp_navigation"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/music"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/music"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/music_amp_audio"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/photography"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/photography"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/photography"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/shopping"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/shopping"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/shopping"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/social"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/social"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/social"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginStart="12dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/sports"
            android:contentDescription="@string/category" />
        <TextView
            android:id="@+id/sports"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sports"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </LinearLayout>
</LinearLayout>